fix(test): vitest doesn't exit after running test

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc",
     "prepare": "husky",
-    "test": "vitest"
+    "test": "vitest run"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
