--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@remix-run/serve": "^2.15.0",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remix-auth": "^4.0.0",
+    "remix-auth-form": "^3.0.0",
+    "remix-auth-github": "^3.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.6.0",
