--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "remix vite:build",
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "remix-serve ./build/server/index.js",
+    "start": "NODE_OPTIONS='--import ./instrumentation.server.mjs' remix-serve ./build/server/nodejs-*/index.js",
     "typecheck": "tsc",
     "prepare": "husky",
     "test": "vitest run"
@@ -22,6 +22,8 @@
     "@remix-run/node": "^2.15.0",
     "@remix-run/react": "^2.15.0",
     "@remix-run/serve": "^2.15.0",
+    "@sentry/remix": "^8.41.0",
+    "@sentry/vite-plugin": "^2.22.6",
     "@vercel/remix": "^2.15.0",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
