--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "NODE_OPTIONS='--import ./instrumentation.server.mjs' remix-serve ./build/server/nodejs-*/index.js",
     "typecheck": "tsc",
     "prepare": "husky",
-    "test": "vitest run"
+    "test": "vitest run",
+    "coverage": "vitest run --coverage"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
@@ -44,6 +45,7 @@
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
+    "@vitest/coverage-v8": "^2.1.5",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.38.0",
     "eslint-import-resolver-typescript": "^3.6.1",
