fix: correct build folder

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: build-artifacts
-          path: .build/
+          path: build/
 
   Deploy-Production:
     needs: Test-and-Build
