--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix vite:build",
+    "build": "NODE_OPTIONS='--import ./app/services/instrumentation.server.mjs' remix vite:build",
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "NODE_OPTIONS='--import ./instrumentation.server.mjs' remix-serve ./build/server/nodejs-*/index.js",
+    "start": "NODE_OPTIONS='--import ./app/services/instrumentation.server.mjs' remix-serve ./build/server/nodejs-*/index.js",
     "typecheck": "tsc",
     "prepare": "husky",
     "test": "vitest run",
